hphp/hack/test/typecheck/switch_case_fallthrough_with_break.php.exp
File "switch_case_fallthrough_with_break.php", line 24, characters 10-11:
Invalid return type (Typing[4110])
File "switch_case_fallthrough_with_break.php", line 10, characters 21-21:
This is an object of type C
File "switch_case_fallthrough_with_break.php", line 15, characters 18-18:
It is incompatible with an object of type B
